# agent-gauntlet

./: .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  blog_post.md  demo_app.py  openenv.yaml  pyproject.toml  requirements.txt  requirements_space.txt  train_grpo.py  train_sft.py
.github/workflows/: ci.yml
agent_gauntlet/: __init__.py  client.py  models.py
agent_gauntlet/packs/: __init__.py  base.py  critic.py  guardrail.py  hallucination.py  jailbreak.py  manager.py  reliability.py  scalability.py
agent_gauntlet/policies/: base.yaml
agent_gauntlet/runtime/: adversarial.py  counterfactual.py  environment.py  kaizen.py  rewards.py  rubrics.py  scenarios.py
agent_gauntlet/verifiers/: __init__.py  grounding.py  policy_engine.py
assets/: .gitkeep  results.json
notebooks/: agent_gauntlet_grpo.ipynb  grpo_unsloth_judge_ready.ipynb  training_grpo.ipynb
scripts/: ablation_runner.py  demo_before_after.py  eval_packs.py  eval_trained_vs_random.py  judge_readiness.py  perturbation_benchmark.py  redteam_reward_audit.py  replay_episode.py  reward_hacking_report.py  rubric_breakdown_report.py  run_baseline.py  sample_generations.py  stress_load.py  update_readme_evidence.py  verify_environment.py
server/: Dockerfile  app.py  compliance.py  guardrails.py  middleware.py  observability.py  runtime_metrics.py  sandbox.py  schemas.py  ui.py
tests/: test_environment.py  test_middleware.py  test_server_api.py  test_type_safety_models.py
tests/packs/: test_packs.py
